# licenta-ecowaste

./: Dockerfile  README.md  docker-compose.yml  image_classification_test.py  pyproject.toml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/ecowaste/: MainActivity.java  (+3 more)
android/app/src/main/res/anim/: bounce.xml  rotate_anim.xml  rotate_bounce.xml  zoom_in.xml  zoom_out.xml
android/app/src/main/res/drawable/: camera_icon.xml  edit_text_bg.xml  ic_delete.xml  map_icon.xml  profile_icon.xml  reset_icon.xml  users_icon.xml
android/app/src/main/res/layout/: activity_admin_dashboard.xml  activity_admin_users.xml  activity_community.xml  activity_dashboard.xml  activity_main.xml  activity_map.xml  activity_my_profile.xml  activity_recycling_tips.xml  activity_reports.xml  activity_scan.xml  activity_signup.xml  activity_update_score.xml  bottom_sheet_recycling_center.xml  item_community_user.xml  item_user.xml  item_user_score.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/main/res/xml/: network_security_config.xml
android/gradle/wrapper/: gradle-wrapper.properties
src/: main.py  test.py
src/api/: admin.py  auth.py  auth_utils.py  recycling.py  status.py  users.py
src/config/: __init__.py  jwt_settings.py
src/db/: __init__.py  manager.py  manger.py
src/models/: base.py  reports.py  users.py
src/ocr/: service.py
src/repository/: base.py  reports.py  users.py
(+25 files in other folders)
