[project]
name = "licenta"
version = "0.1.0"
description = ""
authors = [
    {name = "bianca081002",email = "b.maier15@icloud.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
