[project]
name = "licenta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<4.0"

dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]",
    "motor",
    "pydantic[email]",
    "pydantic-settings",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "bcrypt==3.2.2",
    "transformers>=4.51.3",
    "pillow>=11.2.1",
    "dotenv>=0.9.9",
    "python-multipart",
    "huggingface_hub[hf_xet]" 
]
